Added company form

--- a/main/main/src/main/resources/templates/index.html
+++ b/main/main/src/main/resources/templates/index.html
@@ -380,18 +380,9 @@
                                     <div class="row no-gutters align-items-center">
                                         <div class="col mr-2">
                                             <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">
-                                                Earnings (Monthly)</div>
+                                                Turnover (Monthly)</div>
                                             <div class="h5 mb-0 font-weight-bold text-gray-800" id="earnings"></div>
                                         </div>
-                                        <script>
-                                            async function getEarnings() {
-                                                const response = await fetch("http://localhost:8080/api/dashboard/earnings");
-                                                const data = await response.json();
-                                                document.getElementById("earnings").innerHTML = '$' + data.earnings;
-                                                console.log(data.earnings);
-                                            }
-                                            getEarnings();
-                                        </script>
                                         <div class="col-auto">
                                             <i class="fas fa-calendar fa-2x text-gray-300"></i>
                                         </div>
@@ -406,9 +397,9 @@
                                 <div class="card-body">
                                     <div class="row no-gutters align-items-center">
                                         <div class="col mr-2">
-                                            <div class="text-xs font-weight-bold text-success text-uppercase mb-1">
+                                            <div class="text-xs font-weight-bold text-success text-uppercase mb-1 ">
                                                 Earnings (Annual)</div>
-                                            <div class="h5 mb-0 font-weight-bold text-gray-800">$215,000</div>
+                                            <div class="h5 mb-0 font-weight-bold text-gray-800" id="annually"></div>
                                         </div>
                                         <div class="col-auto">
                                             <i class="fas fa-dollar-sign fa-2x text-gray-300"></i>
