--- a/main/main/src/main/resources/templates/register.html
+++ b/main/main/src/main/resources/templates/register.html
@@ -65,7 +65,7 @@
                                     Register Account
                                 </a>
                                 -->
-                                <button type="submit" class="btn btn-primary btn-user btn-block" value="Register Account">Register</button>
+                                <input type="submit" class="btn btn-primary btn-user btn-block" value="Register Account"></input>
                                 <hr>
                                 <a href="index.html" class="btn btn-google btn-user btn-block">
                                     <i class="fab fa-google fa-fw"></i> Register with Google
