--- a/main/main/src/main/resources/templates/error.html
+++ b/main/main/src/main/resources/templates/error.html
@@ -34,7 +34,7 @@
         <!-- Sidebar - Brand -->
         <a class="sidebar-brand d-flex align-items-center justify-content-center" href="/dashboard">
             <div class="sidebar-brand-icon rotate-n-15">
-                <i class="fas fa-laugh-wink"></i>
+                <i class="fas fa-calculator"></i>
             </div>
             <div class="sidebar-brand-text mx-3">Accounting System</div>
         </a>
@@ -139,6 +139,7 @@
         <div class="text-center d-none d-md-inline">
             <button class="rounded-circle border-0" id="sidebarToggle"></button>
         </div>
+
 
 
     </ul>
@@ -354,32 +355,17 @@
             </nav>
             <!-- End of Topbar -->
 
+
             <!-- Begin Page Content -->
             <div class="container-fluid">
 
-                <!-- Page Heading -->
-
-                <form action="/turnover/insert" method="POST">
-                    <div class="form-group">
-                        <label for="amount">Amount</label>
-                        <input type="text" name="amount" class="form-control" id="amount">
-
-                    </div>
-                    <div class="form-group">
-                        <label for="date">Date</label>
-                        <input type="text" name="date" class="form-control" id="date">
-
-                    </div>
-                    <div class="form-group">
-                        <label for="products">Sold Products</label>
-                        <input type="text" name="products" class="form-control" id="products">
-
-                    </div>
-                    <button type="submit" class="btn btn-primary">Submit</button>
-                </form>
-
-
-                <!-- /.container-fluid -->
+                <!-- 404 Error Text -->
+                <div class="text-center">
+                    <div class="error mx-auto" data-text="404">404</div>
+                    <p class="lead text-gray-800 mb-5">Page Not Found</p>
+                    <p class="text-gray-500 mb-0">It looks like you found a glitch in the matrix...</p>
+                    <a href="/dashboard">&larr; Back to Dashboard</a>
+                </div>
 
             </div>
             <!-- End of Main Content -->
@@ -388,7 +374,7 @@
             <footer class="sticky-footer bg-white">
                 <div class="container my-auto">
                     <div class="copyright text-center my-auto">
-                        <span>Copyright &copy;XYZ Your Website 2021</span>
+                        <span>Copyright &copy;Accounting System 2021</span>
                     </div>
                 </div>
             </footer>
