adding frontend results

--- a/main/main/src/main/resources/templates/index.html
+++ b/main/main/src/main/resources/templates/index.html
@@ -82,9 +82,9 @@
                 <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities"
                     data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
-                        <h6 class="collapse-header">Custom Utilities:</h6>
-                        <a class="collapse-item" href="../static/utilities-color.html">Products</a>
-                        <a class="collapse-item" href="../static/utilities-border.html">Services</a>
+                        <h6 class="collapse-header">Goods and services:</h6>
+                        <a class="collapse-item" href="/product/add">Products</a>
+                        <a class="collapse-item" href="/workservice/insert">Services</a>
                     </div>
                 </div>
             </li>
@@ -410,23 +410,16 @@
                                 <div class="card-body">
                                     <div class="row no-gutters align-items-center">
                                         <div class="col mr-2">
-                                            <div class="text-xs font-weight-bold text-info text-uppercase mb-1">Tasks
-                                            </div>
                                             <div class="row no-gutters align-items-center">
-                                                <div class="col-auto">
-                                                    <div class="h5 mb-0 mr-3 font-weight-bold text-gray-800">50%</div>
+                                                <div class="col mr-2">
+                                                    <div class="text-xs font-weight-bold text-success text-uppercase mb-1 ">
+                                                        Sold Products</div>
+                                                    <div class="h5 mb-0 font-weight-bold text-gray-800" id="soldProducts"></div>
                                                 </div>
-                                                <div class="col">
-                                                    <div class="progress progress-sm mr-2">
-                                                        <div class="progress-bar bg-info" role="progressbar"
-                                                            style="width: 50%" aria-valuenow="50" aria-valuemin="0"
-                                                            aria-valuemax="100"></div>
-                                                    </div>
+                                                <div class="col-auto">
+                                                    <i class="fas fa-dollar-sign fa-2x text-gray-300"></i>
                                                 </div>
                                             </div>
-                                        </div>
-                                        <div class="col-auto">
-                                            <i class="fas fa-clipboard-list fa-2x text-gray-300"></i>
                                         </div>
                                     </div>
                                 </div>
