--- a/main/main/src/main/resources/templates/insert-product.html
+++ b/main/main/src/main/resources/templates/insert-product.html
@@ -82,9 +82,9 @@
             <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities"
                  data-parent="#accordionSidebar">
                 <div class="bg-white py-2 collapse-inner rounded">
-                    <h6 class="collapse-header">Custom Utilities:</h6>
-                    <a class="collapse-item" href="../static/utilities-color.html">Products</a>
-                    <a class="collapse-item" href="../static/utilities-border.html">Services</a>
+                    <h6 class="collapse-header">Goods and services:</h6>
+                    <a class="collapse-item" href="/product/add">Products</a>
+                    <a class="collapse-item" href="/workservice/insert">Services</a>
                 </div>
             </div>
         </li>
