added work services form

--- a/main/main/src/main/resources/templates/index.html
+++ b/main/main/src/main/resources/templates/index.html
@@ -66,8 +66,9 @@
                 </a>
                 <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
-                        <h6 class="collapse-header">Custom Components:</h6>
-                        <a class="collapse-item" href="/turnover/insert">Insert daily turnover</a>
+                        <h6 class="collapse-header">Insert daily turnover:</h6>
+                        <a class="collapse-item" href="/turnover/insert">Products</a>
+                        <a class="collapse-item" href="/turnover/insert/services">Services</a>
                     </div>
                 </div>
             </li>
@@ -412,7 +413,7 @@
                                         <div class="col mr-2">
                                             <div class="row no-gutters align-items-center">
                                                 <div class="col mr-2">
-                                                    <div class="text-xs font-weight-bold text-success text-uppercase mb-1 ">
+                                                    <div class="text-xs font-weight-bold text-info text-uppercase mb-1 ">
                                                         Sold Products</div>
                                                     <div class="h5 mb-0 font-weight-bold text-gray-800" id="soldProducts"></div>
                                                 </div>
@@ -433,8 +434,8 @@
                                     <div class="row no-gutters align-items-center">
                                         <div class="col mr-2">
                                             <div class="text-xs font-weight-bold text-warning text-uppercase mb-1">
-                                                Pending Requests</div>
-                                            <div class="h5 mb-0 font-weight-bold text-gray-800">18</div>
+                                                Sold Services</div>
+                                            <div class="h5 mb-0 font-weight-bold text-gray-800" id="soldServices"></div>
                                         </div>
                                         <div class="col-auto">
                                             <i class="fas fa-comments fa-2x text-gray-300"></i>
