--- a/main/main/src/main/resources/templates/insert-services.html
+++ b/main/main/src/main/resources/templates/insert-services.html
@@ -34,7 +34,7 @@
         <!-- Sidebar - Brand -->
         <a class="sidebar-brand d-flex align-items-center justify-content-center" href="/dashboard">
             <div class="sidebar-brand-icon rotate-n-15">
-                <i class="fas fa-laugh-wink"></i>
+                <i class="fas fa-calculator"></i>
             </div>
             <div class="sidebar-brand-text mx-3">Accounting System</div>
         </a>
@@ -66,8 +66,9 @@
             </a>
             <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
                 <div class="bg-white py-2 collapse-inner rounded">
-                    <h6 class="collapse-header">Custom Components:</h6>
-                    <a class="collapse-item" href="/turnover/insert">Insert daily turnover</a>
+                    <h6 class="collapse-header">Insert daily turnover:</h6>
+                    <a class="collapse-item" href="/turnover/insert">Products</a>
+                    <a class="collapse-item" href="/turnover/insert/services">Services</a>
                 </div>
             </div>
         </li>
