Added revenue sources pie chart

--- a/main/main/src/main/resources/templates/insert-product.html
+++ b/main/main/src/main/resources/templates/insert-product.html
@@ -10,7 +10,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Accounting System - Add Product</title>
+    <title>Accounting System - Add Products</title>
 
     <!-- Custom fonts for this template-->
     <link href="/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
@@ -54,7 +54,7 @@
 
         <!-- Heading -->
         <div class="sidebar-heading">
-            Interface
+            Insert
         </div>
 
         <!-- Nav Item - Pages Collapse Menu -->
@@ -406,7 +406,7 @@
             <footer class="sticky-footer bg-white">
                 <div class="container my-auto">
                     <div class="copyright text-center my-auto">
-                        <span>Copyright &copy;XYZ Your Website 2021</span>
+                        <span>Copyright &copy;Accounting System 2021</span>
                     </div>
                 </div>
             </footer>
