--- a/main/main/src/main/resources/templates/login.html
+++ b/main/main/src/main/resources/templates/login.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Accounting System- Login</title>
+    <title>Accounting System - Login</title>
 
     <!-- Custom fonts for this template-->
     <link href="/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
@@ -72,7 +72,7 @@
 <!--                                        <a class="small" href="/static/forgot-password.html">Forgot Password?</a>-->
 <!--                                    </div>-->
                                     <div class="text-center">
-                                        <a class="small" href="/auth/register">Create an Account!</a>
+                                        <a class="small" href="/register">Create an Account!</a>
                                     </div>
                                 </div>
                             </div>
