--- a/main/main/src/main/resources/templates/add-company.html
+++ b/main/main/src/main/resources/templates/add-company.html
@@ -29,9 +29,8 @@
     <div class="card o-hidden border-0 shadow-lg my-5">
         <div class="card-body p-0">
             <!-- Nested Row within Card Body -->
-            <div class="row">
-                <div class="col-lg-5 d-none d-lg-block bg-register-image"></div>
-                <div class="col-lg-7">
+            <div class="row-custom">
+                <div class="col-lg-7-custom">
                     <div class="p-5">
                         <div class="text-center">
                             <h1 class="h4 text-gray-900 mb-4">Add company</h1>
