--- a/main/main/src/main/resources/templates/register.html
+++ b/main/main/src/main/resources/templates/register.html
@@ -29,9 +29,8 @@
         <div class="card o-hidden border-0 shadow-lg my-5">
             <div class="card-body p-0">
                 <!-- Nested Row within Card Body -->
-                <div class="row">
-                    <div class="col-lg-5 d-none d-lg-block bg-register-image"></div>
-                    <div class="col-lg-7">
+                <div class="row-custom">
+                    <div class="col-lg-7-custom">
                         <div class="p-5">
                             <div class="text-center">
                                 <h1 class="h4 text-gray-900 mb-4">Create an Account!</h1>
@@ -61,10 +60,6 @@
                                             id="exampleRepeatPassword" placeholder="Repeat Password" name="repeatPassword">
                                     </div>
                                 </div>
-                                <!--<a href="login.html" class="btn btn-primary btn-user btn-block">
-                                    Register Account
-                                </a>
-                                -->
                                 <input type="submit" class="btn btn-primary btn-user btn-block" value="Register Account"></input>
                                 <hr>
                                 <a href="index.html" class="btn btn-google btn-user btn-block">
@@ -72,9 +67,6 @@
                                 </a>
                             </form>
                             <hr>
-                            <div class="text-center">
-                                <a class="small" href="/forgot-password.html">Forgot Password?</a>
-                            </div>
                             <div class="text-center">
                                 <a class="small" href="/auth/login">Already have an account? Login!</a>
                             </div>
