Completed Google OAuth

--- a/main/main/src/main/resources/templates/register.html
+++ b/main/main/src/main/resources/templates/register.html
@@ -62,7 +62,7 @@
                                 </div>
                                 <input type="submit" class="btn btn-primary btn-user btn-block" value="Register Account"></input>
                                 <hr>
-                                <a href="index.html" class="btn btn-google btn-user btn-block">
+                                <a href="http://localhost:8080/oauth2/authorization/google" class="btn btn-google btn-user btn-block">
                                     <i class="fab fa-google fa-fw"></i> Register with Google
                                 </a>
                             </form>
